<resources>
    <string name="app_name">GithubSearch</string>

    <!-- error messages -->
    <string name="generic_error_message">Sorry, something went wrong. Please try again later.</string>
    <string name="no_internet_message">Sorry, no internet connection. Kindly check and try again.</string>
    <string name="timeout_error">Sorry, request timed out, kindly reach out to support for assistance.</string>
    <string name="s_username">\@%s</string>
    <string name="watchers">Watchers</string>
    <string name="issues">Issues</string>
    <string name="forks">Forks</string>
    <string name="search_by_repository_name">Search by repository name</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="cd_touch_to_sort_repositories">touch to sort repositories</string>
    <string name="cd_back_button">navigate backwards</string>
    <string name="repository_details">Repository details</string>
    <string name="no_items_to_sort">Sorry, there are no items to sort by.</string>
    <string name="stars">Stars</string>
    <string name="updated">Updated</string>
    <string name="sort_by">Sort by</string>

    <string name="works_at_s">Works %s</string>
    <string name="lives_at_s">Lives in %s</string>
    <string name="read_more">Read more</string>
    <string name="languages">Languages</string>
    <string name="contributors">Contributors</string>
    <string name="s_lines_of_code">%s LoC</string>
    <string name="see_more_on_github">View on GitHub</string>
    <string name="enter_search_keyword">Enter search keyword</string>
    <string name="no_results_found">No results found for keyword</string>
    <string name="limited_feature">Upgrade to pro version to use this feature</string>
    <string name="cd_displays_the_authors_image">displays the authors image</string>
</resources>