<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_app_bar_height"
        android:background="@color/blue"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_edittext_search"
            android:drawableStart="@drawable/ic_search"
            android:drawableTint="@color/text_color_hint"
            android:drawablePadding="8dp"
            android:hint="@string/search_by_repository_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_sort"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_touch_to_sort_repositories"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/sort_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_sort_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/cl_search_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tv_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textColor="@color/text_color_primary"
                app:fontFamily="@font/mark_pro_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sort_by"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/stars"
                    android:textAppearance="@style/chipText"
                    android:textColor="@color/chip_text_color"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/ic_star"
                    app:chipIconTint="@color/chip_icon_color"
                    app:iconStartPadding="8dp"
                    app:textEndPadding="10dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/forks"
                    android:textAppearance="@style/chipText"
                    android:textColor="@color/chip_text_color"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/ic_alt_route"
                    app:chipIconTint="@color/chip_icon_color"
                    app:iconStartPadding="8dp"
                    app:textEndPadding="10dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/updated"
                    android:textAppearance="@style/chipText"
                    android:textColor="@color/chip_text_color"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/ic_updated"
                    app:chipIconTint="@color/chip_icon_color"
                    app:iconStartPadding="8dp"
                    app:textEndPadding="10dp" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_sort_layout" />

    <ProgressBar
        android:id="@+id/pb_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/empty_state"
        layout="@layout/layout_search_empty" />

    <include
        android:id="@+id/no_results_state"
        layout="@layout/layout_search_no_results"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>