<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clipChildren="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_user_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/item_card_horizontal_padding"
                android:paddingVertical="@dimen/item_card_vertical_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black_10"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/s_username"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:fontFamily="@font/mark_pro_bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_repo_details"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/item_card_horizontal_padding"
                android:paddingVertical="@dimen/item_card_vertical_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cl_user_details">

                <TextView
                    android:id="@+id/tv_repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_primary"
                    android:textSize="18sp"
                    app:fontFamily="@font/mark_pro_bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:lines="2"
                    android:maxLines="2"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_repo_name" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/divider_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintWidth_percent=".8" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@id/divider">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_watchers_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".33">

                        <TextView
                            android:id="@+id/tv_watcher_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watchers"
                            android:textSize="11sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_watchers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="11sp"
                            app:layout_constraintEnd_toEndOf="@id/tv_watcher_label"
                            app:layout_constraintStart_toStartOf="@id/tv_watcher_label"
                            app:layout_constraintTop_toBottomOf="@id/tv_watcher_label" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_forks_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/cl_watchers_layout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".33">

                        <TextView
                            android:id="@+id/tv_forks_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forks"
                            android:textSize="11sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_forks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="11sp"
                            app:layout_constraintEnd_toEndOf="@id/tv_forks_label"
                            app:layout_constraintStart_toStartOf="@id/tv_forks_label"
                            app:layout_constraintTop_toBottomOf="@id/tv_forks_label" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_issues_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/cl_forks_layout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".33">

                        <TextView
                            android:id="@+id/tv_issues_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issues"
                            android:textSize="11sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_issues"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="11sp"
                            app:layout_constraintEnd_toEndOf="@id/tv_issues_label"
                            app:layout_constraintStart_toStartOf="@id/tv_issues_label"
                            app:layout_constraintTop_toBottomOf="@id/tv_issues_label" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>