<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.RepoDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_app_bar_height"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_back_button"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_color_primary" />

        <TextView
            android:id="@+id/tv_repo_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="58dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            app:fontFamily="@font/mark_pro_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="10dp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_author_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="100dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="@id/iv_avatar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:id="@+id/tv_author_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_primary"
                        android:textSize="16sp"
                        app:fontFamily="@font/mark_pro_bold" />

                    <TextView
                        android:id="@+id/tv_author_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blue"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tv_workplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/text_color_secondary"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text_color_secondary"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_read_more_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/background_primary_button"
                        android:text="@string/read_more"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:fontFamily="@font/mark_pro_bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/cv_author_info">

                <TextView
                    android:id="@+id/tv_repo_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository_details"
                    android:textColor="@color/blue"
                    app:fontFamily="@font/mark_pro_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_repo_details"
                    app:layout_constraintTop_toBottomOf="@id/tv_repo_details" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/blue"
                    app:layout_constraintEnd_toEndOf="@id/tv_repo_details"
                    app:layout_constraintStart_toStartOf="@id/tv_repo_details"
                    app:layout_constraintTop_toBottomOf="@id/tv_repo_details" />

                <TextView
                    android:id="@+id/tv_repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_color_primary"
                    android:textSize="114sp"
                    app:layout_constraintTop_toBottomOf="@id/divider" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>